# idiotic

./: .gitignore  DRC.dru  IoT.lbr  LICENSE  README.md
CAM Files/: PeraltaExport.cam  PeraltaExportWindows.cam
Components/ESP8266/: version.h
DoorSensor/: Headers.sch
DoorSensor/Gerber/: Outline.art  SolderMaskTop.art
Gerber/breakout/: SolderMaskTop.art
Gerber/door/: Bottom.art  Drill.txt  Outline.art  SolderMaskBottom.art  SolderMaskTop.art  Top.art
IR/: eagle.epf
IR/remoteDetection/: remoteDetection.ino
Modules/Door Sensor/: MicroUSB.brd  MicroUSB.sch  eagle.epf
Parts/3.3 V Regulator/: Notes.gddoc
arduino/: CMakeLists.txt  platformio.ini
arduino/libraries/: README.md
arduino/libraries/ESP8266WiFi/: CMakeLists.txt
arduino/temp-sensor/: Adafruit_MCP9808.cpp  CMakeLists.txt  temp-sensor.cpp  temp-sensor.ino
eagle/cam/: PeraltaExport.cam  PeraltaExportWindows.cam  peralta-top-only.cam  peralta.cam
eagle/libraries/: IoT.lbr  idiotic-bridge-rectifiers.lbr  idiotic-connectors.lbr  idiotic-diodes.lbr  idiotic-microcontrollers.lbr  idiotic-packages.lbr  idiotic-passives.lbr  idiotic-regulators.lbr  idiotic-relays.lbr  idiotic-sensors.lbr  idiotic-switches.lbr  idiotic.lbr
embedded/: .gitignore  README.md  platformio.ini
modules/breakout-board/: arduino  eagle  gerber
modules/door-sensor/: arduino  driver  eagle  embedded  gerber
modules/hue/: driver  python
server/: README.md  app.py  idiotic_server.py  idiotic_server.wsgi  iot_server.py  iot_server.wsgi  requirements.txt  server.js  server.py
web-server/: chromecast.py  server.js
(+127 files in other folders)
